корректировки стиля MainPageCss

--- a/html_css_testing/Index.html
+++ b/html_css_testing/Index.html
@@ -19,8 +19,10 @@
     <div>
 
 
-        <table id="contentTable"></table>
-        <button id="loadMoreButton" style="display: none;" onclick="loadMore()">Load More</button>
+        <div class="scrollable-container">
+            <table id="contentTable"></table>
+            <button id="loadMoreButton" style="display: none;" onclick="loadMore()">Load More</button>
+        </div>
 
     </div>
 
