корректировка страницы Admin

--- a/html_css_testing/Index.html
+++ b/html_css_testing/Index.html
@@ -37,8 +37,9 @@
                 "Таким образом, повышение уровня гражданского сознания напрямую зависит от модели развития! Практический опыт показывает, что социально-экономическое развитие обеспечивает актуальность всесторонне сбалансированных нововведений! ",
             "Не следует, однако, забывать о том, что новая модель организационной деятельности создаёт предпосылки качественно новых шагов для дальнейших направлений развитая системы массового участия. Значимость этих проблем настолько очевидна, что выбранный нами инновационный путь обеспечивает актуальность экономической целесообразности принимаемых решений!",
                 "Равным образом курс на социально-ориентированный национальный проект представляет собой интересный эксперимент проверки форм воздействия. ",
-                "Равным образом курс  "
-            ];
+                "Равным образом курс  ",
+                'Дорогие друзья, курс на социально-ориентированный <b>национальный проект</b> в значительной степени обуславливает создание новых предложений?<br><br>Разнообразный и <u>богатый опыт </u>консультация с профессионалами из IT <a href="https://gsgen.ru/tools/fish-text/">способствует повышению актуальности форм воздействия.</a><br><br>'
+                   ];
         let displayedCount = 3;
         displayData();
 
